# fomod-validator-cli

./: .editorconfig  .envrc  .gitignore  README.md  flake.nix  pyproject.toml
.github/: description  topics
src/fomod_validator_cli/: main.py
