[tool.poetry]
name = "fomod-validator-cli"
version = "0.0.0"
description = "CLI FOMod validation application"
authors = ["Loïc Reynier <loic+dev@loicreynier.fr>"]
homepage = "https://github.com/loicreynier/fomod-validator-cli"
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyfomod = "^1.2.1"
typer = "^0.9.0"
typing-extensions = "^4.8.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.2"

[tool.poetry.scripts]
fomod-validator = "fomod_validator_cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
